WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147567
Fix error handling case in Cache::dumpContentsToFile()
https://bugs.webkit.org/show_bug.cgi?id=147567
Summary
Fix error handling case in Cache::dumpContentsToFile()
Chris Dumez
Reported
2015-08-03 10:57:02 PDT
Cache::dumpContentsToFile() was expecting openFile() to return 0 in case of error. However, it returns invalidPlatformFileHandle, which is -1 on Unix.
Attachments
Patch
(1.56 KB, patch)
2015-08-03 10:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-08-03 10:58:20 PDT
Created
attachment 258078
[details]
Patch
Andreas Kling
Comment 2
2015-08-03 11:36:13 PDT
Comment on
attachment 258078
[details]
Patch Whoops!
WebKit Commit Bot
Comment 3
2015-08-03 12:20:38 PDT
Comment on
attachment 258078
[details]
Patch Clearing flags on attachment: 258078 Committed
r187749
: <
http://trac.webkit.org/changeset/187749
>
WebKit Commit Bot
Comment 4
2015-08-03 12:20:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug