Fix error handling case in Cache::dumpContentsToFile() https://bugs.webkit.org/show_bug.cgi?id=147567

Reviewed by Andreas Kling.

Cache::dumpContentsToFile() was expecting openFile() to return 0 in case
of error. However, it returns invalidPlatformFileHandle, which is -1 on
Unix.

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::Cache::dumpContentsToFile):


Canonical link: https://commits.webkit.org/165632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187749 268f45cc-cd09-0410-ab3c-d52691b4dbfc